logs/neg/t608-neg.log
t608.scala:16: error: type mismatch;
 found   : hs
 required: hs
       = g(f(x).bimap(id))
                     ^
one error found
